# machine-learning

./: .gitignore  README.md  model.h5  pyproject.toml
lesson10/: convolutions.py  nn_mnist.py
lesson11/: cnn.py  shallownet_cifar10.py
lesson12/: cnn.py  load_model_and_predict.py
lesson13/: output.json  show_chart.py
lesson14/: visualize_model.py
lesson14/pyimagesearch/nn/: conv.py
lesson3/: knn.py
lesson4/: decision_trees.py  logistic_regression.py  svm.py
lesson5/: knn.py  parameterized_learning.py
lesson6/: mini_batch_SGD.py  regularization_SGD.py
lesson8/: neuralnetwork.py  nn.py  nn_xor.py
