[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["ErEr <jeffliao92316046@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-python = "^4.11.0.86"
opencv-contrib-python = "^4.11.0.86"
scikit-image = "^0.25.2"
imutils = "^0.5.4"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
progressbar2 = "^4.5.0"
beautifulsoup4 = "^4.13.3"
pandas = "^2.2.3"
sh = "^2.2.1"
json-minify = "^0.3.0"
tensorflow = {version = "^2.13.0" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"
labelimg = "^1.8.6"
mahotas = "^1.4.18"
pydot = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
